<resources>
    <string name="app_name">cognitivo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="select_grid_size_title">Select grid size</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="username">Username :</string>
    <string name="password">Password :</string>
    <string name="user_details">User Details</string>
    <string name="firstname">First Name:</string>
    <string name="lastname">Last Name:</string>
    <string name="email">Email:</string>
    <string name="dob">Date of Birth:</string>
    <string name="title_activity_create_user">CreateUserActivity</string>
    <string name="create_user_account">Create User Account</string>
</resources>
