<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CreateUserActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/create_user_account"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="22dp"
        android:text="@string/lastname"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="20dp"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="50dp"
        android:text="@string/firstname"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/et_fisrtname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:layout_toEndOf="@+id/textView8">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/et_lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignRight="@+id/et_fisrtname"
        android:ems="10"
        android:layout_toEndOf="@+id/textView8" />

    <EditText
        android:id="@+id/et_cu_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignRight="@+id/et_lastname"
        android:ems="10"
        android:layout_toEndOf="@+id/textView8" />

    <EditText
        android:id="@+id/et_cu_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignRight="@+id/et_cu_username"
        android:ems="10"
        android:layout_toEndOf="@+id/textView8" />

    <Button
        android:id="@+id/btn_createuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_user_account"
        android:layout_below="@+id/et_cu_country"
        android:layout_alignStart="@+id/textView1"
        android:layout_marginTop="27dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Date of Birth :"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/et_cu_password"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/et_cu_dob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_alignBottom="@+id/textView8"
        android:layout_alignEnd="@+id/et_cu_password"
        android:layout_toEndOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email :"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignBottom="@+id/et_cu_email"
        android:layout_alignStart="@+id/textView5" />

    <EditText
        android:id="@+id/et_cu_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/et_cu_dob"
        android:layout_alignEnd="@+id/et_cu_password"
        android:layout_toEndOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Country :"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignBottom="@+id/et_cu_country"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/et_cu_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/et_cu_email"
        android:layout_alignEnd="@+id/et_cu_password"
        android:layout_alignStart="@+id/et_cu_email" />

</RelativeLayout>